added vuex-persist and router gurads, I have also added adding cow component

--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "axios": "^0.18.0",
     "chart.js": "^2.7.2",
     "vue": "^2.5.2",
+    "vue-localstorage": "^0.6.2",
     "vue-router": "^3.0.1",
     "vuetify": "^1.0.19",
     "vuex": "^3.0.1",
+    "vuex-persist": "^1.4.3",
+    "vuex-persistedstate": "^2.5.4",
     "vuex-router": "^1.1.5",
     "vuex-router-sync": "^5.0.0"
   },
