--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^2.5.2",
     "vue-localstorage": "^0.6.2",
     "vue-router": "^3.0.1",
+    "vue-search-select": "^2.6.1",
     "vuetify": "^1.0.19",
     "vuex": "^3.0.1",
     "vuex-persist": "^1.4.3",
